# instagram-flet-py

./: README.md  main.py  pyproject.toml  requirements.txt  utils.py
libs/components/: appbar.py  navigation_bar.py  post.py  story.py
src/: main.py
