[tool.poetry]
name = "instagram-app"
version = "0.1.0"
description = "An Instagram UI clone made with Flet and Python"
authors = ["tokitou-san <tokitousan2005@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{include = "instagram_app"}]

[tool.poetry.dependencies]
python = "^3.10"
anyio = "4.0.0"
certifi = "2023.11.17"
colorama = "0.4.6"
copier = "8.1.0"
decorator = "5.1.1"
dunamai = "1.19.0"
exceptiongroup = "1.1.3"
flet = "0.9.0"
flet-core = "0.9.0"
flet-runtime = "0.9.0"
funcy = "2.0"
h11 = "0.14.0"
httpcore = "0.17.3"
httpx = "0.24.1"
idna = "3.4"
jinja2 = "3.1.2"
jinja2-ansible-filters = "1.3.2"
markupsafe = "2.1.3"
oauthlib = "3.2.2"
packaging = "23.2"
pathspec = "0.11.2"
plumbum = "1.8.2"
prompt-toolkit = "3.0.41"
pydantic = "1.10.13"
pygments = "2.17.1"
pypng = "0.20220715.0"
pyyaml = "6.0.1"
pyyaml-include = "1.3.1"
qrcode = "7.4.2"
questionary = "1.10.0"
repath = "0.9.0"
six = "1.16.0"
sniffio = "1.3.0"
typing-extensions = "4.8.0"
watchdog = "3.0.0"
wcwidth = "0.2.12"
websocket-client = "1.6.4"
websockets = "11.0.3"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
