[tool.poetry]
name = "instagram-app"
version = "0.1.0"
description = "An Instagram UI clone made with Flet and Python"
authors = ["tokitou-san <tokitousan2005@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{include = "libs"}]

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
