[tool.poetry]
name = "instagram-flet-py"
version = "0.1.0"
description = "This project is a UI clone of Instagram developed using the Flet framework and Python."
authors = ["tokitou-san <tokitousan2005@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{include = "libs"}]

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
